# digimon-ng

./: 0.1.0-screenshots.md  README.md  angular.json  package-lock.json  package.json  transloco.config.ts  tsconfig.json
public/assets/i18n/: en.json  es.json  pt-br.json
public/database/: base-digimon-list.json  player-data.json
scripts/: bump-version.js
src/: index.html  main.ts  styles.scss  theme-crest-of-hope.scss  theme-dark-masters.scss  theme-default.scss  theme-digimon.scss  theme-digital-hazard.scss  theme-nature-spirits.scss  theme-royal-knights.scss  variables.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  global-state.datasource.ts  transloco-loader.ts
src/app/common/action-bar/: action-bar.component.html  action-bar.component.scss  action-bar.component.ts
src/app/common/main-layout/: main-layout.component.html  main-layout.component.scss  main-layout.component.ts
src/app/common/splashscreen/: splashscreen.component.html  splashscreen.component.scss  splashscreen.component.ts
src/app/core/consts/: languages.ts  locations.ts  themes.ts
src/app/core/enums/: audio-tracks.enum.ts  digimon-list-location.enum.ts  digimon-seeds.enum.ts
src/app/core/interfaces/: dialogue.interface.ts  digimon.interface.ts  player-config.interface.ts  player-data.interface.ts
src/app/core/types/: ai.type.ts
src/app/core/utils/: digimon.utils.ts
src/app/directives/: tooltip.directive.ts
src/app/environments/: environment.ts
src/app/modules/adventure/: adventure.component.html  adventure.component.scss  adventure.component.ts
src/app/modules/desktop/: desktop.component.html  desktop.component.scss  desktop.component.ts  desktop.datasource.ts
src/app/modules/initial-setup/: initial-setup.component.html  (+2 more)
src/app/pipes/: localized-number.pipe.ts
src/app/services/: ai.service.ts  attack-animation.service.ts  audio.service.ts  config.service.ts  dialogue-controller.service.ts  dialogue.service.ts  digimon.service.ts  graph.service.ts  player-data.service.ts  shortcut.service.ts  theme.service.ts  window.service.ts
src/app/state/: config-state.datasource.ts  global-state.datasource.ts
(+103 files in other folders)
